# python-devops-app

./: .coverage  Dockerfile  Jenkinsfile  README.md  coverage.xml  functional_test.sh  pyproject.toml  pytest-report.xml  sonar-project.properties
app/: main.py
k8s/: deployment.yml  service.yml
performance/: load_test.sh  locustfile.py
tests/: test_basic.py
